--- a/src/app.css
+++ b/src/app.css
@@ -1,20 +1,24 @@
+/*Define default CSS variables to be used across app*/
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 	  Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--color-bg: #f0f0f0;
 	--color-text: #3d3d3d;
   }
-  
+
+/*Simplify layout management to ensure borders and padding don't unintentionally overflow their containers. */
   *, *::before, *::after {
 	box-sizing: border-box;
   }
-  
+
+/*Remove default margin and padding and set html and body to take up the whole of the viewport space*/
   html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
   }
   
+/*Set default font, colors and overflow for body using variables defined in root*/
   body {
 	font-family: var(--font-body);
 	background-color: var(--color-bg);
@@ -23,12 +27,14 @@
 	line-height: 1.5;
   }
   
+/*Set defaults for H1*/
   h1 {
 	font-size: 2rem;
 	text-align: center;
 	margin: 0;
   }
 
+/*Set default to hide elements with class .sr-only. This means we can easily add elements meant only for screen readers (improving accessibility) without affecting our visual layout*/
   .sr-only {
 	position: absolute;
 	width: 1px;
