--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--color-bg: #f0f0f0;
-	--color-text: #3d3d3d;
-	--color-theme: #0074c2;
+	--color-accent: hsl(210, 86%, 52%);
+	--color-onAccent: hsl(0, 0%, 100%); /* the text color on a accent colored background */
+	--color-secondary: hsl(0, 0%, 91%);
+	--color-background: #ffffff;
+	--color-surface: #e9e9e9;
+	--color-text: #2d3748;
+}
+
+[data-theme='dark'] {
+	--color-secondary: #3b3b3b;
+	--color-background: #121212;
+	--color-surface: #3b3b3b;
+	--color-text: #dedede;
 }
 
 body {
@@ -11,7 +25,7 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
-	background-color: var(--color-bg);
+	background-color: var(--color-background);
 	color: var(--color-text);
 }
 
@@ -25,7 +39,7 @@ p {
 }
 
 a {
-	color: var(--color-theme);
+	color: var(--color-accent);
 	text-decoration: none;
 }
 
